:tada: add bulk nie generator
